RType/parser/gal/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package gal.parser;

import java.io.BufferedReader;
import java.io.FileReader;
import java.util.LinkedList;

import gal.ast.AST;
import gal.ast.Actions;
import gal.ast.Argument;
import gal.ast.Automaton;
import gal.ast.Behaviour;
import gal.ast.BinaryOp;
import gal.ast.Category;
import gal.ast.Condition;
import gal.ast.Direction;
import gal.ast.Dollar;
import gal.ast.Expression;
import gal.ast.Field;
import gal.ast.FunCall;
import gal.ast.Key;
import gal.ast.Mode;
import gal.ast.Opposite;
import gal.ast.State;
import gal.ast.Terminal;
import gal.ast.Transition;
import gal.ast.UnaryOp;
import gal.ast.Underscore;
import gal.ast.Value;
import gal.ast.export.Ast2Dot;
import gal.ast.export.Ast2Gal;
import gal.ast.export.AutPrinter;

public class Parser implements ParserConstants {

	public static AST from_file(String path_file) throws Exception {
		AST ast = new Parser(new BufferedReader(new FileReader(path_file))).parse();
		return ast;
	}

	public static boolean option(String option, String[] args) {
		int i = 0;
		while (i < args.length) {
			if (args[i].equals(option)) {
				return true;
			}
			i++;
		}
		return false;
	}

	public static int index_of_option(String option, String[] args) {
		int i = 0;
		while (i < args.length) {
			if (args[i].equals(option)) {
				return i;
			}
			i++;
		}
		return -1;
	}

	public static void main(String[] args) throws Exception {
		AST ast;
		int i = index_of_option("-file", args);
		ast = from_file(args[i + 1]);

		if (option("-ast", args)) {
			Ast2Dot printer = new Ast2Dot();
			ast.accept(printer);
			System.out.println("\n// Exporting the AST of the parsed automata in .dot");
			System.out.println(printer.to_dot());
		}

		if (option("-aut", args)) {
			System.out.println("// Exporting the CFG of the parsed automata in .dot");
			new AutPrinter(System.out, ast);
		}

		if (option("-src", args)) {
			Ast2Gal printer = new Ast2Gal();
			ast.accept(printer);
			System.out.println("\n// Exporting the reformatted SRC of the parsed automata in .txt");
			System.out.println(printer.export());
		}

		/*
		 * if ( option("-AST",args) ) { ASTPrinter ast_printer = new ASTPrinter();
		 * ast.accept(ast_printer);
		 * System.out.println("// THE AST of the PARSED AUTOMATA in DOT FORMAT \n");
		 * System.out.println(ast_printer.to_dot()); } if ( option("-AUT",args) ) {
		 * System.out.println("// THE AUTOMATA in DOT FORMAT \n"); AutomataPrinter v =
		 * new AutomataPrinter(); v.print(System.out, ast); }
		 */

	}

//TOKEN:
//{ < INTEGER: (<MINUS>)? <NAT> >  }

// == THE PARSER ==
	final public

			AST parse() throws ParseException {
		LinkedList<Automaton> automata = new LinkedList<Automaton>();
		Automaton aut;
		label_1: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case KEY:
			case CONDITION:
			case ACTION:
			case DIRECTION:
			case CATEGORY:
			case IDENTIFIER: {
				;
				break;
			}
			default:
				jj_la1[0] = jj_gen;
				break label_1;
			}
			aut = pAutomaton();
			automata.add(aut);
		}
		jj_consume_token(0);
		{
			if ("" != null)
				return new AST(automata);
		}
		throw new Error("Missing return statement in function");
	}

// STATE 
	final public State pState() throws ParseException {
		String name;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case 26: {
			jj_consume_token(26);
			name = pStateIdentifier();
			jj_consume_token(27);
			{
				if ("" != null)
					return new State(name, true);
			}
			break;
		}
		default:
			jj_la1[1] = jj_gen;
			name = pStateIdentifier(); {
			if ("" != null)
				return new State(name, false);
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public String pStateIdentifier() throws ParseException {
		String name;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case KEY:
		case CONDITION:
		case ACTION:
		case DIRECTION:
		case CATEGORY:
		case IDENTIFIER: {
			name = pIdentifier();
			{
				if ("" != null)
					return name;
			}
			break;
		}
		case UNDERSCORE: {
			jj_consume_token(UNDERSCORE);
			{
				if ("" != null)
					return "_";
			}
			break;
		}
		default:
			jj_la1[2] = jj_gen; {
			if ("" != null)
				return "";
		}
		}
		throw new Error("Missing return statement in function");
	}

// AUTOMATON
	final public Automaton pAutomaton() throws ParseException {
		String name;
		State state;
		LinkedList<Mode> modes = new LinkedList<Mode>();
		Mode mode;
		name = pIdentifier();
		jj_consume_token(26);
		state = pState();
		jj_consume_token(27);
		jj_consume_token(28);
		label_2: while (true) {
			mode = pMode();
			modes.add(mode);
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case 30: {
				;
				break;
			}
			default:
				jj_la1[3] = jj_gen;
				break label_2;
			}
		}
		jj_consume_token(29);
		{
			if ("" != null)
				return new Automaton(name, state, modes);
		}
		throw new Error("Missing return statement in function");
	}

// MODE, BEHAVIOUR, TRANSITION 
	final public Mode pMode() throws ParseException {
		State state;
		Mode mode;
		Behaviour behaviour;
		jj_consume_token(30);
		state = pState();
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case 31: {
			jj_consume_token(31);
			break;
		}
		default:
			jj_la1[4] = jj_gen;
			;
		}
		behaviour = pBehaviour();
		{
			if ("" != null)
				return new Mode(state, behaviour);
		}
		throw new Error("Missing return statement in function");
	}

	final public Behaviour pBehaviour() throws ParseException {
		LinkedList<Transition> transitions = new LinkedList<Transition>();
		Transition t;
		label_3: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case KEY:
			case CONDITION:
			case NOT:
			case 26:
			case 32: {
				;
				break;
			}
			default:
				jj_la1[5] = jj_gen;
				break label_3;
			}
			t = pTransition();
			transitions.add(t);
		}
		{
			if ("" != null)
				return new Behaviour(transitions);
		}
		throw new Error("Missing return statement in function");
	}

	final public Transition pTransition() throws ParseException {
		Condition condition;
		Actions actions = new Actions();
		State state;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case 32: {
			jj_consume_token(32);
			break;
		}
		default:
			jj_la1[6] = jj_gen;
			;
		}
		condition = pCondition();
		jj_consume_token(33);
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case ACTION:
		case NAT: {
			pActions(actions);
			break;
		}
		default:
			jj_la1[7] = jj_gen;
			;
		}
		jj_consume_token(31);
		state = pState();
		{
			if ("" != null)
				return new Transition(condition, actions, state);
		}
		throw new Error("Missing return statement in function");
	}

// ACTIONS 
	final public void pActions(Actions actions) throws ParseException {
		FunCall action;
		String op = null;
		action = pProbabilisticAction();
		actions.add(action);
		label_4: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case DISJUNCTION:
			case SEQUENCE: {
				;
				break;
			}
			default:
				jj_la1[8] = jj_gen;
				break label_4;
			}
			op = pActionOperator();
			actions.set(op);
			action = pProbabilisticAction();
			actions.add(action);
		}
	}

	final public String pActionOperator() throws ParseException {
		Token token;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case DISJUNCTION: {
			token = jj_consume_token(DISJUNCTION);
			break;
		}
		case SEQUENCE: {
			token = jj_consume_token(SEQUENCE);
			break;
		}
		default:
			jj_la1[9] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		{
			if ("" != null)
				return token.image;
		}
		throw new Error("Missing return statement in function");
	}

	final public FunCall pProbabilisticAction() throws ParseException {
		int percent;
		Token action;
		LinkedList<Argument> arguments = new LinkedList<Argument>();
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case NAT: {
			percent = pPercent();
			action = jj_consume_token(ACTION);
			arguments = pOptionalArguments();
			{
				if ("" != null)
					return new FunCall(percent, action.image, arguments);
			}
			break;
		}
		case ACTION: {
			action = jj_consume_token(ACTION);
			arguments = pOptionalArguments();
			{
				if ("" != null)
					return new FunCall(action.image, arguments);
			}
			break;
		}
		default:
			jj_la1[10] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public int pPercent() throws ParseException {
		int n;
		n = pNat();
		jj_consume_token(34);
		{
			if ("" != null)
				return n;
		}
		throw new Error("Missing return statement in function");
	}

// CONDITION
	final public Condition pCondition() throws ParseException {
		Expression expr;
		expr = pExpression();
		{
			if ("" != null)
				return new Condition(expr);
		}
		throw new Error("Missing return statement in function");
	}

	final public Expression pExpression() throws ParseException {
		Expression e, expr;
		Token token;
		FunCall pred;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case 26: {
			jj_consume_token(26);
			e = pExpression();
			jj_consume_token(27);
			expr = pBinop_Expression(e);
			{
				if ("" != null)
					return expr;
			}
			break;
		}
		case NOT: {
			token = jj_consume_token(NOT);
			expr = pExpression();
			{
				if ("" != null)
					return new UnaryOp(token.image, expr);
			}
			break;
		}
		case KEY:
		case CONDITION: {
			pred = pPredicate();
			expr = pBinop_Expression(pred);
			{
				if ("" != null)
					return expr;
			}
			break;
		}
		default:
			jj_la1[11] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public Expression pBinop_Expression(Expression e1) throws ParseException {
		Token token;
		Expression e2;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case CONJUNCTION:
		case DISJUNCTION: {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case CONJUNCTION: {
				token = jj_consume_token(CONJUNCTION);
				break;
			}
			case DISJUNCTION: {
				token = jj_consume_token(DISJUNCTION);
				break;
			}
			default:
				jj_la1[12] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			e2 = pExpression();
			{
				if ("" != null)
					return new BinaryOp(token.image, e1, e2);
			}
			break;
		}
		default:
			jj_la1[13] = jj_gen; {
			if ("" != null)
				return e1;
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public FunCall pPredicate() throws ParseException {
		Token token;
		LinkedList<Argument> arguments = new LinkedList<Argument>();
		Key key;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case KEY: {
			token = jj_consume_token(KEY);
			jj_consume_token(26);
			key = pKeyName();
			jj_consume_token(27);
			arguments.add(key);
			{
				if ("" != null)
					return new FunCall(token.image, arguments);
			}
			break;
		}
		case CONDITION: {
			token = jj_consume_token(CONDITION);
			arguments = pOptionalArguments();
			{
				if ("" != null)
					return new FunCall(token.image, arguments);
			}
			break;
		}
		default:
			jj_la1[14] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

// PARAMETERS
	final public LinkedList<Argument> pOptionalArguments() throws ParseException {
		LinkedList<Argument> arguments = new LinkedList<Argument>();
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case 26: {
			jj_consume_token(26);
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case DIRECTION:
			case CATEGORY:
			case UNDERSCORE:
			case DOLLAR:
			case MINUS:
			case OPP:
			case IDENTIFIER:
			case NAT: {
				pArguments(arguments);
				break;
			}
			default:
				jj_la1[15] = jj_gen;
				;
			}
			jj_consume_token(27);
			{
				if ("" != null)
					return arguments;
			}
			break;
		}
		default:
			jj_la1[16] = jj_gen; {
			if ("" != null)
				return arguments;
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public void pArguments(LinkedList<Argument> arguments) throws ParseException {
		Argument p;
		p = pArgument();
		arguments.add(p);
		label_5: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case 35: {
				;
				break;
			}
			default:
				jj_la1[17] = jj_gen;
				break label_5;
			}
			jj_consume_token(35);
			p = pArgument();
			arguments.add(p);
		}
	}

	final public Argument pArgument() throws ParseException {
		Token token;
		Argument argument;
		int i;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case DIRECTION: {
			argument = pDirection();
			{
				if ("" != null)
					return argument;
			}
			break;
		}
		case CATEGORY:
		case IDENTIFIER: {
			argument = pCategory();
			{
				if ("" != null)
					return argument;
			}
			break;
		}
		case MINUS:
		case NAT: {
			i = pInteger();
			{
				if ("" != null)
					return new Value(i);
			}
			break;
		}
		case DOLLAR: {
			argument = pVariable();
			{
				if ("" != null)
					return argument;
			}
			break;
		}
		case UNDERSCORE: {
			jj_consume_token(UNDERSCORE);
			{
				if ("" != null)
					return new Underscore(new Terminal("_"));
			}
			break;
		}
		case OPP: {
			jj_consume_token(OPP);
			argument = pArgument();
			{
				if ("" != null)
					return new Opposite(argument);
			}
			break;
		}
		default:
			jj_la1[18] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

// DIRECTION 	
	final public Direction pDirection() throws ParseException {
		Token token;
		token = jj_consume_token(DIRECTION);
		{
			if ("" != null)
				return new Direction(new Terminal(token.image));
		}
		throw new Error("Missing return statement in function");
	}

// CATEGORY 
	final public Category pCategory() throws ParseException {
		Token token;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case CATEGORY: {
			token = jj_consume_token(CATEGORY);
			{
				if ("" != null)
					return new Category(new Terminal(token.image));
			}
			break;
		}
		case IDENTIFIER: {
			token = jj_consume_token(IDENTIFIER);
			{
				if ("" != null)
					return new Category(new Terminal(token.image));
			}
			break;
		}
		default:
			jj_la1[19] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

// VARIABLE
	final public Argument pVariable() throws ParseException {
		Dollar d;
		Argument p;
		d = pDollar();
		p = pOptField(d);
		{
			if ("" != null)
				return p;
		}
		throw new Error("Missing return statement in function");
	}

	final public Dollar pDollar() throws ParseException {
		int n;
		jj_consume_token(DOLLAR);
		n = pNat();
		{
			if ("" != null)
				return new Dollar(n);
		}
		throw new Error("Missing return statement in function");
	}

	final public Argument pOptField(Dollar dollar) throws ParseException {
		Token token;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case 36: {
			jj_consume_token(36);
			token = jj_consume_token(LOWERCASE);
			{
				if ("" != null)
					return new Field(dollar, new Terminal(token.image));
			}
			break;
		}
		default:
			jj_la1[20] = jj_gen; {
			if ("" != null)
				return dollar;
		}
		}
		throw new Error("Missing return statement in function");
	}

// KEY NAME 
	final public Key pKeyName() throws ParseException {
		Token token;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case NAT: {
			token = jj_consume_token(NAT);
			break;
		}
		case LOWERCASE: {
			token = pLowercase();
			break;
		}
		case SPECIAL_KEY: {
			token = jj_consume_token(SPECIAL_KEY);
			break;
		}
		case MOUSE: {
			token = jj_consume_token(MOUSE);
			break;
		}
		case UNDERSCORE: {
			token = jj_consume_token(UNDERSCORE);
			break;
		}
		default:
			jj_la1[21] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		{
			if ("" != null)
				return new Key(new Terminal(token.image));
		}
		throw new Error("Missing return statement in function");
	}

// LOWERCASE  
	final public Token pLowercase() throws ParseException {
		Token token;
		token = jj_consume_token(LOWERCASE);
		{
			if ("" != null)
				return token;
		}
		throw new Error("Missing return statement in function");
	}

// IDENTIFIER
	final public String pIdentifier() throws ParseException {
		Token token;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case IDENTIFIER: {
			token = jj_consume_token(IDENTIFIER);
			break;
		}
		case ACTION: {
			token = jj_consume_token(ACTION);
			break;
		}
		case CONDITION: {
			token = jj_consume_token(CONDITION);
			break;
		}
		case KEY: {
			token = jj_consume_token(KEY);
			break;
		}
		case CATEGORY: {
			token = jj_consume_token(CATEGORY);
			break;
		}
		case DIRECTION: {
			token = jj_consume_token(DIRECTION);
			break;
		}
		default:
			jj_la1[22] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		{
			if ("" != null)
				return token.image;
		}
		throw new Error("Missing return statement in function");
	}

// NATURAL
	final public int pNat() throws ParseException {
		Token token;
		token = jj_consume_token(NAT);
		{
			if ("" != null)
				return Integer.parseInt(token.image);
		}
		throw new Error("Missing return statement in function");
	}

// INTEGER
	final public int pInteger() throws ParseException {
		int s = 1;
		int n;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case MINUS: {
			jj_consume_token(MINUS);
			s = -1;
			break;
		}
		default:
			jj_la1[23] = jj_gen;
			;
		}
		n = pNat();
		{
			if ("" != null)
				return s * n;
		}
		throw new Error("Missing return statement in function");
	}

	/** Generated Token Manager. */
	public ParserTokenManager token_source;
	SimpleCharStream jj_input_stream;
	/** Current token. */
	public Token token;
	/** Next token. */
	public Token jj_nt;
	private int jj_ntk;
	private int jj_gen;
	final private int[] jj_la1 = new int[24];
	static private int[] jj_la1_0;
	static private int[] jj_la1_1;
	static {
		jj_la1_init_0();
		jj_la1_init_1();
	}

	private static void jj_la1_init_0() {
		jj_la1_0 = new int[] { 0x10006e0, 0x4000000, 0x10016e0, 0x40000000, 0x80000000, 0x4040060, 0x0, 0x2000080,
				0xc00000, 0xc00000, 0x2000080, 0x4040060, 0x600000, 0x600000, 0x60, 0x31a1600, 0x4000000, 0x0,
				0x31a1600, 0x1000400, 0x0, 0x2005900, 0x10006e0, 0x80000, };
	}

	private static void jj_la1_init_1() {
		jj_la1_1 = new int[] { 0x0, 0x0, 0x0, 0x0, 0x0, 0x1, 0x1, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x8,
				0x0, 0x0, 0x10, 0x0, 0x0, 0x0, };
	}

	/** Constructor with InputStream. */
	public Parser(java.io.InputStream stream) {
		this(stream, null);
	}

	/** Constructor with InputStream and supplied encoding */
	public Parser(java.io.InputStream stream, String encoding) {
		try {
			jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
		} catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		token_source = new ParserTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 24; i++)
			jj_la1[i] = -1;
	}

	/** Reinitialise. */
	public void ReInit(java.io.InputStream stream) {
		ReInit(stream, null);
	}
